[gd_scene load_steps=9 format=3 uid="uid://c64hrxxfcfsgh"]

[ext_resource type="Script" path="res://Combat/Skill/SkillActivationLogic/SkillLine.gd" id="1_vu2la"]
[ext_resource type="Texture2D" uid="uid://1rchbt6cga3r" path="res://Assets/common/768px-OOjs_UI_icon_draggable.svg.png" id="2_8vwhd"]
[ext_resource type="Texture2D" uid="uid://b5tgshoh63pt7" path="res://Assets/common/plus-sign.png" id="3_0c7xx"]
[ext_resource type="PackedScene" uid="uid://boavwn27odb54" path="res://Combat/Skill/SkillActivationLogic/SkillLogicCondition/activation_condition.tscn" id="4_bfgvw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dn164"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7maai"]
bg_color = Color(0.65098, 0.65098, 0.65098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ix8xa"]
bg_color = Color(0.380392, 0.380392, 0.380392, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1w84k"]

[node name="Control" type="ColorRect"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.937255, 0.937255, 0.937255, 1)
script = ExtResource("1_vu2la")

[node name="MenuButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
offset_right = 50.0
offset_bottom = 50.0
size_flags_vertical = 0
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_dn164")
theme_override_styles/hover = SubResource("StyleBoxFlat_7maai")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ix8xa")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1w84k")
keep_pressed_outside = true

[node name="TextureRect" type="TextureRect" parent="MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_8vwhd")
expand_mode = 1

[node name="SkillName" type="Label" parent="."]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
offset_left = 52.0
offset_right = 152.0
offset_bottom = 50.0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "Text1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TargetContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 168.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.045
anchor_right = 0.998
anchor_bottom = 1.0
offset_left = 0.159996
offset_top = 50.0
offset_right = 0.303955
offset_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ActivationCondition" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_bfgvw")]
layout_mode = 2

[node name="ActivationCondition2" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_bfgvw")]
layout_mode = 2

[node name="AddConditionButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_dn164")
theme_override_styles/hover = SubResource("StyleBoxFlat_7maai")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ix8xa")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1w84k")
keep_pressed_outside = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/AddConditionButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 12.0
offset_right = -11.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_0c7xx")
expand_mode = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="MenuButton" to="." method="_on_menu_button_button_down"]
[connection signal="button_up" from="MenuButton" to="." method="_on_menu_button_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddConditionButton" to="." method="_on_add_condition_button_pressed"]
